--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
     <link type="text/css" rel="stylesheet" href="base.css">
 </head>
 <body>
-<h1>web前端学习记录</h1>
-<time>2017年2月7号</time>
+<header class="title">
+    <h1>web前端学习记录</h1>
+    <p>2017年2月7号</p>
+</header>
+<aside class="left-nav">
+    <a href="#part1">知识点+实践</a>
+    <a href="#part2">知识点总结</a>
+    <a href="#part3">学习发散实践</a>
+</aside>
+<section class="part1 part">
+    <a name="part1">知识点+实践</a>
+    <div class="html-part">HTML</div>
+    <div class="html5-part">HTML5</div>
+</section>
+<section class="part2 part">
+    <a name="part2">知识点总结</a>
+    <div class="knowledge-summary">
+        <h2>HTML超文本标记语言</h2>
+        <div class="content">
+            <p>&lt;!DOCTYPE html&gt;用于HTML5的文档声明。告诉浏览器用什么标准解析这个文档。
+            因为HTML4基于SGML，需要引用DTD，告知浏览器文档使用的文档类型.
+            而HTML5不基于SGML，不需要引用DTD
+            </p>
+            <hr><p>标准通用标记语言（Standard Generalized Markup Language，SGML）
+                是现时常用的<em>超文本</em>格式的最高层次标准，是可以定义标记语言的<em>元语言</em>，
+                甚至可以定义不必采用< >的常规方式。</p>
+        </div>
+    </div>
+</section>
+<section class="part3 part">
+    <a name="part3">学习发散实践</a>
+</section>
 </body>
 <script type="text/javascript" src="common.js"></script>
 </html>
